--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-light bg-light sticky-top">
       <button id="generate" href="#" class="btn btn-primary" >Generate</button>
       <span class="navbar-brand h1 mx-auto"><img src="https://www.phantauth.ga/logo/phantauth-logo-black.svg"></img> User Example</span>
-      <a href="https://codesandbox.io/s/l29kk3j90z?fontsize=14" class="btn btn-primary" >Edit</a>
+      <a href="https://codesandbox.io/s/github/phantauth/phantauth-sample-user/tree/production/" class="btn btn-primary" >Edit</a>
     </nav>
 
     <div class="container before-generate mt-3" style="display: none;">
